# AI-multi-agent-debate-club

./: Dockerfile  README.md  app.py  config.py  create_repo.sh  docker-compose.yml  docker-run.sh  pyproject.toml  run.sh  server_debug.py  topics_cache.json
backend/: __init__.py  config.py
backend/agents/: debate_manager.py  debate_setter.py  debater_agent.py  scorekeeper_agent.py  streaming_debate_manager.py
backend/api/: models.py  routes.py
backend/components/: loading_animation.py
backend/data_sources/: data_manager.py  fact_checker.py  kialo_scraper.py  scraper.py  wiki_scraper.py
backend/debate/llm/: client.py
backend/server/: __init__.py  api_routes.py  config.py  llm_api_client.py  orchestrator.py  workflow_manager.py
backend/services/: llm_service.py
backend/storage/: dataframe.py  vector_store.py
backend/storage/db/: chroma.sqlite3
db/: chroma.sqlite3
